--- a/README.org
+++ b/README.org
@@ -8,6 +8,6 @@
 see header of source.
 * But what about flex?
 
-I don't like flex.  It often returns results I didn't intend. It needs other [[http://scottfrazersblog.blogspot.com/2009/12/emacs-better-ido-flex-matching.html][optimizations]] to make it truly useful.
+I don't like flex.  It often returns results I didn't intend. It needs other [[http://scottfrazersblog.blogspot.com/2009/12/emacs-better-ido-flex-matching.html][optimizations]] to be useful.
 
 Anything's space separated regexps require a few more keystrokes, but the results are consistent and predictable.  See the header of anything-match-plugin.el for details.
