--- a/README.org
+++ b/README.org
@@ -1,14 +1,106 @@
+
+;;; Installation:
+
+;; 1. install `helm' from github
+;;
+;; 2. clone the `helm-cmd-t' repository to "~/.emacs.d/helm-cmd-t"
+;;
+;; 3. add to your config
+;;
+;;      (push "~/.emacs.d/helm-cmd-t" load-path)
+;;      (require 'helm-config)
+;;      (require 'helm-cmd-t)
+;;      (global-set-key (kbd "M-t") 'helm-cmd-t)
+;;
+;; 4. additional optional helm settings to make helm more responsive.
+;;
+;;      (setq helm-ff-lynx-style-map nil
+;;            helm-input-idle-delay 0.1
+;;            helm-idle-delay 0.1
+;;      )
+;;
+;; 5. have a look at helm-C-x-b.el for more examples of how to use the
+;;    `helm-cmd-t' source to craft your own master file chooser.
+;;
+;; 6. read the self-documenting code for additional configuration options.
+;;
+
+
+;;; Commentary:
+
+
+
+
 * Purpose
 
-1. Provide FAST FAST FAST cmd-t completion in repositions (git, hg, etc)
+This package provides a helm source for repository (git, hg, etc) based
+file selection.  The emphasis is on fast file-name completion.  The concept
+of a "respository" is configurable through `helm-cmd-t-repo-types'.
+
+Each repository is cached for fast access (see
+`helm-cmd-t-cache-threshhold'), and in the future, options will be
+available to interact with the repository (i.e. grep, etc).
+
+`helm-cmd-t' is the simple predefined command that opens a file in the
+current repository, however, it's highly recommended that you add a helm
+source like recentf that keeps track of recent files you've worked with.
+This way, you don't have to worry about your respository cache being out of
+sync.  See "helm-C-x-b.el" for an example of a custom drop-in
+replacement for `switch-to-buffer' or "C-x b".
 
 * Install
 
-see header of source.
-* But what about flex?
+1. install `helm' from github
 
-I don't like flex.  It often returns results I didn't intend. It needs other
-[[http://scottfrazersblog.blogspot.com/2009/12/emacs-better-ido-flex-matching.html][optimizations]] to be useful.
+2. clone the `helm-cmd-t' repository to "~/.emacs.d/helm-cmd-t"
+
+3. add to your config
+
+    (push "~/.emacs.d/helm-cmd-t" load-path)
+    (require 'helm-config)
+    (require 'helm-cmd-t)
+    (global-set-key (kbd "M-t") 'helm-cmd-t)
+
+4. additional optional helm settings to make helm more responsive.
+
+    (setq helm-ff-lynx-style-map nil
+          helm-input-idle-delay 0.1
+          helm-idle-delay 0.1)
+
+5. have a look at helm-C-x-b.el for more examples of how to use the
+   `helm-cmd-t' source to craft your own master file chooser.
+
+6. read the self-documenting code for additional configuration options.
+
+
+* Creating an ad-hoc source
+
+** It's easy to convert any file system directory into a source
+
+#+begin_src emacs-lisp
+(setq downloads-source (helm-cmd-t-get-create-source-dir "~/Downloads"))
+#+end_src
+
+** Define a command based on the source:
+
+#+begin_src emacs-lisp
+(defun choose-from-downloads ()
+  "Choose file from test folder."
+  (interactive)
+  (helm :sources downloads-source))
+#+end_src
+
+** Combine sources to make custom file selectors
+
+see helm-C-x-b.el
+
+* But what about fuzy matching?
+
+Fuzzy matching is really interesting and useful when done well.
+Unfortunatley it hasn't been done well in Helm.
+
+See [[https://github.com/lewang/flx][flx]] for a take on fuzzy (flex) matching similar to Sublime Texts.
+Unfortunately it's not available in helm yet.
 
 Helm's space separated regexps require a few more keystrokes, but the results
 are consistent and predictable.  See the header of helm-match-plugin.el for
